--- a/css/bar.css
+++ b/css/bar.css
@@ -26,7 +26,7 @@ li h1 {
   color: #ffffff;
 	font-weight: 500;
 	cursor: pointer;
-	font-size: 0.8vw;
+	font-size: var(--h2);
 }
 
 
@@ -62,21 +62,21 @@ li h1 {
 	color: #ffffffcf;
 	font-weight: 300;
 	cursor: pointer;
-	font-size: 0.7vw;
+	font-size: var(--h3);
 	transition: var(--duration);
 }
 .menu-bar h1:hover{
 	color: #ffffff;
 	font-weight: 300;
 	cursor: pointer;
-	font-size: 0.7vw;
+	font-size: var(--h3);
 	transition: var(--duration);
 }
 .menu-bar.active h1{
 	color: #ffffff;
 	font-weight: 500;
 	cursor: pointer;
-	font-size: 0.7vw;
+	font-size: var(--h3);
 	transition: var(--duration);
 }
 
@@ -86,7 +86,7 @@ li h1 {
 	font-weight: 300;
 	margin-left: 1vw;
 	cursor: pointer;
-	font-size: 0.7vw;
+	font-size: var(--h3);
 }
 .under-menu.active h2{
 	transition: var(--duration);
@@ -105,7 +105,7 @@ li h1 {
 	color: #ffffff99;
 	font-weight: 300;
 	cursor: pointer;
-	font-size: 1.5vh;
+	font-size: var(--h2);
 	transition: var(--duration);
 }
 .bar-item h1:hover{
@@ -113,7 +113,7 @@ li h1 {
 	font-weight: 300;
 	margin-left: 0.5vw;
 	cursor: pointer;
-	font-size: 1.5vh;
+	font-size: var(--h2);
 	transition: var(--duration);
 }
 .bar-item.active h1{
@@ -121,7 +121,7 @@ li h1 {
 	font-weight: 600;
 	margin-left: 0.5vw;
 	cursor: pointer;
-	font-size: 1.5vh;
+	font-size: var(--h2);
 	transition: var(--duration);
 }
 
@@ -142,7 +142,7 @@ li h1 {
 .call-back h2{
 	color: #ffffff99;
 	font-weight: 300;
-	font-size: 0.7vw;
+	font-size: var(--h3);
 }
 .call-back form{
 	margin-top: 1vw;
@@ -150,28 +150,34 @@ li h1 {
 .call-back form input{
 	background-color: transparent;
 	border-style: solid;
-	border-radius: 5vw;
+	border-radius: 0.5em;
 	border-width: 0.1vw;
 	border-color: #ffffff;
-	font-size: 0.8vw;
+	font-size: var(--h3);
 	padding: 0.2vw 0.3vw;
 	color: #ffffff;
 	margin: 0.3vw 0;
+	width: 100%;
 }
 .call-back form input::placeholder{
+	font-family: "Montserrat", sans-serif;
 	color: #ffffff69;
 	font-weight: 300;
-	padding-left: 1vw;
-	font-size: 0.7vw;
+	padding-left: 0.5vw;
+	font-size: var(--h3);
 }
 .call-back form button{
 	color: var(--blue);
 	width: 100%;
+	background-color: #ffffff;
+	font-size: var(--h3);
 }
 .C{
 	margin-top: 2vw;
-	color: #ffffff;
+	color: #ffffff99;
 	font-weight: 400;
 	cursor: pointer;
-	font-size: 0.6vw;
+	font-size: var(--h3);
+	margin-bottom: 0.5vw;
+	text-align: center;
 }
