--- a/css/content.css
+++ b/css/content.css
@@ -28,7 +28,7 @@
 	gap: 1vw;
 }
 .navigation p{
-	font-size: 0.7vw;
+	font-size: var(--h3);
 	font-weight: 500;
 	color: #595959;
 	cursor: pointer;
@@ -44,6 +44,7 @@
 	color: var(--blue);
 	gap: 2vw;
 	margin: 1vw 0 1vw 0;
+	flex-wrap: wrap;
 }
 .categories{
 	transition: all 0.2s ease;
@@ -66,17 +67,17 @@
 	margin-left: 3%;
 }
 .main-content_text h1{
-	font-size: 1.8vw;
+	font-size: var(--h1);
 	font-weight: 600;
 	color: var(--dark_blue);
 }
 .main-content_text h2{
-	font-size: 1.5vw;
+	font-size: var(--h1);
 	font-weight: 500;
 	color: var(--blue);
 }
 .main-content_text p{
-	font-size: 0.8vw;
+	font-size: var(--h2);
 	font-weight: 500;
 	color: #595959;
 	margin: 1vw 0;
@@ -84,8 +85,6 @@
 .main-content_podsegment{
 	width: 69%;
 	height: auto;
-	/* background-image: url(/assets/img/12.png);
-	background-size: cover; */
 	background-color: #b6b6b620;
 	border-radius: 1vw;
 	
@@ -177,7 +176,7 @@
 .segment-btn h2{
 	font-weight: 500;
 	color: #ffffff;
-	font-size: 0.8vw;
+	font-size: var(--h3);
 	padding: 0.5vw;
 	cursor: pointer;
 	text-align: center;
@@ -206,13 +205,13 @@
 	width: 70%;
 }
 .segment-slide .text h1{
-	font-size: 1.8vw;
+	font-size: var(--h1);
 	font-weight: 600;
 	color: var(--dark_blue);
 }
 .segment-slide .text h2{
 	margin-top: 1vw;
-	font-size: 1.5vw;
+	font-size: var(--h1);
 	font-weight: 400;
 	color: var(--blue);
 }
@@ -321,27 +320,28 @@
 .serti-text h2{
 	margin: clamp(14px, 6vh, 20px) 0 0 0;
 	width: 85%;
-	font-size: clamp(10px, 0.5vw, 20px);
-	line-height: clamp(14px, 2vh, 20px);
-	font-weight: 500;
+	font-size: var(--h3);
+	line-height: clamp(14px, 1vh, 20px);
+	font-weight: 400;
 	color: var(--dark_blue);
 }
 .serti-text h2 span{
-	font-size: clamp(12px, 1.2vw, 20px);
+	font-size: 3vh;
 	color: var(--blue);
 	font-weight: 500;
-	line-height: clamp(19px, 3vh, 25px);
+	line-height: 2.5vh;
 	margin: clamp(14px, 6vh, 20px) 0 0 0;
 }
 .serti-text h2 span p{
-	font-size: clamp(10px, 0.8vw, 20px);
+	font-size: 1.8vh;
 	color: var(--dark_blue);
-	line-height: clamp(19px, 3vh, 25px);
+	line-height: 2.5vh;
 	font-weight: 500;
 }
 .serti-text a button{
 	width: 30% ;
 	background-color: var(--blue);
+	color: #ffffff;
 }
 .serti-text a button:hover{
 	background-color: var(--dark_blue);
