--- a/css/master.css
+++ b/css/master.css
@@ -7,7 +7,6 @@
 @import url('contact.css');
 
 
-/* <?php include "./components/header.php" ?> */
 
 :root {
 	--main_black: #222222;
@@ -15,6 +14,12 @@
 	--dark_blue: #00487F;
 	--duration: all 0.5s ease;
 	--shad: 0 0.2vw 0.5vw #2222224f;
+	--h1: clamp(15px, 4vh, 25px);
+	--h2: clamp(12px, 1.8vh, 20px);
+	--h22: clamp(12px, 2vh, 20px);
+	--h3: clamp(10px, 1vh, 15px);
+	--h5: clamp(8px, 0.8vh, 12px);
+	--lh: 2.8vh;
 }
 *{
 	cursor: auto;
@@ -35,13 +40,13 @@ li {
 h1,h2,h3,p,span{
 	font-family: "Montserrat", sans-serif;
 	font-weight: 400;
-	font-size: clamp(12px, 0.8vw, 20px);
+	font-size: var(--h2);
 	color: var(--main_black);
 }
 .button{
 	font-family: "Montserrat", sans-serif;
 	font-weight: 500;
-	font-size: clamp(12px, 0.8vw, 20px);
+	font-size: var(--h2);
 	border-style: solid;
 	border-width: 0.15vw;
 	border-color: var(--blue);
@@ -69,7 +74,7 @@ h1,h2,h3,p,span{
 	height: 0.3vw;
 }
 .swiper-button-next:after,.swiper-button-prev:after {
-	font-size: clamp(12px, 1.8vw, 20px) !important;
+	font-size: var(--h1) !important;
 	color: var(--blue);
 	margin: 2vw;
 }
