--- a/css/master.css
+++ b/css/master.css
@@ -14,11 +14,16 @@
 	--dark_blue: #00487F;
 	--duration: all 0.5s ease;
 	--shad: 0 0.2vw 0.5vw #2222224f;
-	--h1: clamp(15px, 4vh, 25px);
+	/* --h1: clamp(15px, 4vh, 25px);
 	--h2: clamp(12px, 1.8vh, 20px);
 	--h22: clamp(12px, 2vh, 20px);
 	--h3: clamp(10px, 1vh, 15px);
-	--h5: clamp(8px, 0.8vh, 12px);
+	--h5: clamp(8px, 0.8vh, 12px); */
+	--h1: 4vh;
+	--h2: 2vh;
+	--h22: 1.6vh;
+	--h3: 1vh;
+	--h5: 0.8vh;
 	--lh: 2.8vh;
 }
 *{
