--- a/css/about.css
+++ b/css/about.css
@@ -13,8 +13,8 @@
 	justify-content: space-between;
 }
 .about-title_text h2{
-	font-size: var(--h22);
-	color: var(--dark_blue);
+	font-size: var(--h2);
+	color: var(--main_black);
 	line-height: var(--lh);
 }
 .about-title_text-slide-1{
@@ -30,8 +30,8 @@
 }
 
 .about-title_text-1{
-	font-size: var(--h22);
-	color: var(--dark_blue);
+	font-size: var(--h2);
+	color: var(--main_black);
 	font-weight: 400;
 	line-height: var(--lh);
 }
@@ -78,8 +78,8 @@
 }
 .about_btn_text button{
 	font-family: "Montserrat", sans-serif;
-	font-size: var(--h22);
-	color: var(--dark_blue);
+	font-size: var(--h2);
+	color: var(--main_black);
 	font-weight: 400;
 	cursor: pointer;
 	background-color: transparent;
@@ -139,14 +139,38 @@
 }
 
 .swiper-v-slide h3{
-	font-size: var(--h2);
+	font-size: 1.8vh;
 	font-weight: 400;
 	line-height: var(--lh);
 	height: 9vh;
-	color: var(--dark_blue);
+	color: var(--main_black);
 	display: flex;
 	align-items: center;
 }	
 .swiper-v-slide img{
 	height: 6vh;
+}
+
+.oborud{
+	display: flex !important;
+	flex-direction: column !important;
+	align-items: center !important;
+	width: 100% !important;
+}
+.oborud img{
+	width: 90vh;
+	margin: 5vh;
+}
+.oborud h2 span{
+	font-weight: 500;
+	color: var(--dark_blue);
+}
+.ur-info h2{
+	font-size: var(--h22);
+	color: var(--dark_blue);
+}
+.ur-info h2 span{
+	font-size: var(--h22);
+	color: var(--blue);
+	margin-left: 1vh;
 }
