--- a/css/content.css
+++ b/css/content.css
@@ -28,7 +28,7 @@
 	gap: 1vw;
 }
 .navigation p{
-	font-size: var(--h3);
+	font-size: var(--h22);
 	font-weight: 500;
 	color: #595959;
 	cursor: pointer;
@@ -73,7 +73,7 @@
 }
 .main-content_text h2{
 	font-size: var(--h1);
-	font-weight: 500;
+	font-weight: 400;
 	color: var(--blue);
 }
 .main-content_text p{
@@ -176,7 +176,7 @@
 .segment-btn h2{
 	font-weight: 500;
 	color: #ffffff;
-	font-size: var(--h3);
+	font-size: var(--h22);
 	padding: 0.5vw;
 	cursor: pointer;
 	text-align: center;
@@ -211,7 +211,7 @@
 }
 .segment-slide .text h2{
 	margin-top: 1vw;
-	font-size: var(--h1);
+	font-size: var(--h2);
 	font-weight: 400;
 	color: var(--blue);
 }
@@ -321,7 +321,7 @@
 	margin: clamp(14px, 6vh, 20px) 0 0 0;
 	width: 85%;
 	font-size: var(--h3);
-	line-height: clamp(14px, 1vh, 20px);
+	line-height: clamp(10px, 0.8vh, 20px);
 	font-weight: 400;
 	color: var(--dark_blue);
 }
@@ -334,14 +334,15 @@
 }
 .serti-text h2 span p{
 	font-size: 1.8vh;
-	color: var(--dark_blue);
+	color: var(--main_black);
 	line-height: 2.5vh;
-	font-weight: 500;
+	font-weight: 400;
 }
 .serti-text a button{
-	width: 30% ;
+	width: 40% ;
 	background-color: var(--blue);
 	color: #ffffff;
+	padding: 0.5vw;
 }
 .serti-text a button:hover{
 	background-color: var(--dark_blue);
@@ -359,6 +360,5 @@
 	margin-bottom: 2vw;
 	margin-top: 1vw;
 }
-
 
 
